Tue Dec 18 01:15:44 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (encs): added dependencies.

	* enc/Makefile.in, enc/depend, enc/make_encmake.rb: moved serb code.

	* lib/mkmf.rb (depend_rules): now takes content string, not file name.

	* win32/enc-setup.mak: overrides default target.

Tue Dec 18 00:26:12 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_initialize): raise error if non-Unicode fixed
	  encoding option is specified for regexp literals with \u{}
	  escapes.

	* string.c (rb_str_squeeze_bang): should squeeze multibyte
	  characters as well.

Mon Dec 17 21:41:25 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/enc-setup.mak: extracts BUILTIN_ENCOBJS.

	* tool/compile_prelude.rb: needs srcdir.

Mon Dec 17 21:24:04 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* common.mk (miniprelude.c): add -I$(srcdir).

Mon Dec 17 20:53:27 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_set_ssl_version):
	  new method OpenSSL::SSL::SSLContext#ssl_version to wrap
	  SSL_CTX_set_ssl_version.

	* ext/openssl/ossl_ssl.c (ossl_ssl_get_verify_result):
	  new method OpenSSL::SSL::SSLSocket#verify_result to wrap
	  SSL_get_verrify_result.

	* ext/openssl/lib/openssl/ssl.rb (OpenSSL::SSL::SSLContext.build):
	  new method to build OpenSSL::SSL::SSLContext with Hash parameters.
	  this method provides safety default parameters than SSLContext.new.

	* ext/openssl/lib/openssl/ssl.rb (OpenSSL::SSL.verify_cetificate_identity):
	  new module function: pull out identity verification process
	  from OpenSSL::SSL::SSLSocket#post_connection_check.

Mon Dec 17 18:42:23 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (scan_once): need no encoding compatibility check.
	  it's done inside of re_reg_seach().

	* string.c (rb_str_split_m): ditto.

	* re.c (rb_reg_regsub): ditto.

Mon Dec 17 17:50:30 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_index): check if substring is broken.
